[gd_scene load_steps=2 format=3 uid="uid://cnb52vwthl1q3"]

[ext_resource type="Script" path="res://scenes/town_scene.gd" id="1_town_scene"]

[node name="TownScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_town_scene")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313725, 0.470588, 0.313725, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 150.0
offset_right = -40.0
offset_bottom = 550.0
grow_horizontal = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Town"

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InventoryButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(220, 60)
theme_override_font_sizes/font_size = 40
text = "Inventar"

[node name="SmithButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(220, 60)
theme_override_font_sizes/font_size = 40
text = "Schmied"

[node name="ShopButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(220, 60)
theme_override_font_sizes/font_size = 40
text = "Shop"

[node name="FightButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(220, 60)
theme_override_font_sizes/font_size = 40
text = "Kampf"

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(220, 60)
theme_override_font_sizes/font_size = 40
text = "Spiel beenden"

